--- a/APIDemo/appsettings.json
+++ b/APIDemo/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "APIDemoContext": "Server=4893LG2-SHEL;Database=APIDemo.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
